--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "canvas-confetti": "^1.9.3",
+    "firebase": "^12.4.0",
     "mongoose": "^8.3.1",
     "next": "15.5.2",
     "notistack": "^3.0.1",
