feat: add auth0 to the app

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.11.0",
     "canvas-confetti": "^1.9.3",
     "mongoose": "^8.3.1",
     "next": "15.5.2",
