--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.11.0",
     "canvas-confetti": "^1.9.3",
+    "emoji-picker-react": "^4.15.0",
     "mongoose": "^8.3.1",
     "next": "15.5.2",
     "notistack": "^3.0.1",
