--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.11.0",
+    "@giphy/js-fetch-api": "^5.7.0",
+    "@giphy/react-components": "^10.1.0",
     "canvas-confetti": "^1.9.3",
     "emoji-picker-react": "^4.15.0",
     "mongoose": "^8.3.1",
@@ -18,6 +20,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.51.2",
+    "styled-components": "^6.1.19",
     "zod": "^3.22.4"
   },
   "devDependencies": {
